--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <h1>John Doe</h1>
+    <h1>Yash Diwate</h1>
     <p>Web Developer | Video Editor | Engineering Student</p>
   </header>
 
@@ -22,8 +22,8 @@
     <ul>
       <li>HTML, CSS, JavaScript</li>
       <li>Arduino, Sensors</li>
-      <li>Adobe Premiere Pro, CapCut</li>
-      <li>GitHub, VS Code</li>
+      <li>Adobe Premiere Pro, CapCut, DaVinci Resolve</li>
+      <li>GitHub, VS Code,  Canva, Figma</li>
     </ul>
   </section>
 
@@ -39,13 +39,13 @@
 
   <section id="contact">
     <h2>Contact</h2>
-    <p>Email: johndoe@example.com</p>
-    <p>GitHub: github.com/johndoe</p>
-    <p>LinkedIn: linkedin.com/in/johndoe</p>
+    <p>Email: yashdiwate99@gmail.com</p>
+    <p>GitHub: github.com/YASH-DIWATE-99</p>
+    <p>LinkedIn: linkedin.com/in/Yash Diwate</p>
   </section>
 
   <footer>
-    <p>&copy; 2025 John Doe. All rights reserved.</p>
+    <p>&copy; 2025 Yash Diwate. All rights reserved.</p>
   </footer>
 </body>
 </html>
