Made links clickable

--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
 
   <section id="contact">
     <h2>Contact</h2>
-    <p>Email: yashdiwate99@gmail.com</p>
-    <p>GitHub: github.com/YASH-DIWATE-99</p>
-    <p>LinkedIn: linkedin.com/in/Yash Diwate</p>
+    <p>Email :<a href="mailto:yashdiwatw99@gmailcom"> yashdiwate99@gmail.com</a></p>
+    <p>Github :<a href="htts://github.com/YASH-DIWATE-99" target="_blank"> github.com/YASH-DIWATE-99</a></p>
+    <p>LinkedIn:<a href="https://www.linkedin.com/in/YashDiwate/" target="_blank"> linkedin.com/in/Yash Diwate</a></p>
   </section>
 
   <footer>
