--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <h2>Contact</h2>
     <p>Email :<a href="mailto:yashdiwatw99@gmailcom"> yashdiwate99@gmail.com</a></p>
     <p>Github :<a href="htts://github.com/YASH-DIWATE-99" target="_blank"> github.com/YASH-DIWATE-99</a></p>
-    <p>LinkedIn:<a href="https://www.linkedin.com/in/YASHDIWATE/" target="_blank"> linkedin.com/in/Yash Diwate</a></p>
+    <p>LinkedIn:<a href="https://www.linkedin.com/in/YASHDIWATE/" target="_blank"> linkedin.com/in/YASH DIWATE</a></p>
   </section>
 
   <footer>
