--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <h2>Contact</h2>
     <p>Email :<a href="mailto:yashdiwatw99@gmailcom"> yashdiwate99@gmail.com</a></p>
     <p>Github :<a href="htts://github.com/YASH-DIWATE-99" target="_blank"> github.com/YASH-DIWATE-99</a></p>
-    <p>LinkedIn:<a href="https://www.linkedin.com/in/YASHDIWATE/" target="_blank"> linkedin.com/in/YASH DIWATE</a></p>
+    <p>LinkedIn:<a href="https://www.linkedin.com/in/yash-diwate-84a6b8315?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BY2EViL0wTY2Yffv3VIiYJw%3D%3D/" target="_blank"> linkedin.com/in/YASH DIWATE</a></p>
   </section>
 
   <footer>
