--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
   <section id="skills">
     <h2>Skills</h2>
     <ul>
-      <li>HTML, CSS, JavaScript</li>
-      <li>Arduino, Sensors</li>
+      <li>HTML, CSS, JavaScript, C++</li>
+      <li>Arduino, Sensors, ESP32</li>
       <li>Adobe Premiere Pro, CapCut, DaVinci Resolve</li>
-      <li>GitHub, VS Code,  Canva, Figma</li>
+      <li>GitHub, VS Code,  Canva</li>
     </ul>
   </section>
 
